# country_data

./: .dockerignore  Dockerfile  README.md  compose.yml  country_data.csv  main.py  pyproject.toml  webscrapper.py
