[project]
name = "country-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-groq>=0.3.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
]
